[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.1", default-features = false, features = ["macros", "compress-gzip", "cookies"] }
async-graphql = "3.0"
async-graphql-actix-web = "3.0" # If you need to integrate into actix-web




# watch for changes and recompile: RUST_BACKTRACE=full cargo watch -c -w src -x run